<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefresh"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    tools:context=".view.fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingHorizontal="30dp"
                android:paddingTop="55dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/welcome"
                        style="@style/SemiBold36Sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchTheme"
                        android:layout_width="0dp"
                        android:layout_height="52dp"
                        android:layout_weight="1"
                        app:trackTint="?colorOnPrimary"
                        app:thumbTint="?colorPrimary"
                        android:layout_gravity="end|center_vertical" />

                </LinearLayout>

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchUsername"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/bg_radius_16dp"
                    android:backgroundTint="?colorSecondary"
                    app:submitBackground="?colorSecondary"
                    app:queryHint="@string/search_username" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_of_users"
                    style="@style/SemiBold24Sp"
                    android:layout_marginTop="24dp" />

                <TextView
                    android:id="@+id/tvError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/there_s_an_error_when_fetching_api_d"
                    style="@style/Medium14Sp"
                    android:visibility="gone"
                    android:textColor="@color/red_accent"
                    android:layout_marginTop="24dp" />

                <TextView
                    android:id="@+id/tvEmptyResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_result_is_empty"
                    style="@style/Medium14Sp"
                    android:textColor="@color/red_accent"
                    android:visibility="gone"
                    android:layout_marginTop="24dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="-24dp"
                    tools:listitem="@layout/item_user"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnLove"
            android:layout_width="52dp"
            android:layout_height="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="55dp"
            android:src="@drawable/ic_love_pressed"
            android:backgroundTint="@color/light_secondary"
            android:contentDescription="@string/love_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>