<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:paddingTop="55dp"
    android:paddingHorizontal="30dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/your_favorite_list"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/SemiBold36Sp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/there_s_an_error_when_fetching_api_d"
            style="@style/Medium14Sp"
            android:visibility="gone"
            android:layout_marginTop="24dp"
            android:textColor="@color/red_accent" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_don_t_have_any_favorite_users"
            style="@style/Medium14Sp"
            android:visibility="gone"
            android:layout_marginTop="24dp"
            android:textColor="@color/red_accent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="-24dp"
            tools:listitem="@layout/item_user"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBack"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:src="@drawable/ic_back"
        android:backgroundTint="@color/green_accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/icon_back" />

</androidx.constraintlayout.widget.ConstraintLayout>
